--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,9 @@
 }
 
 body {
-  background-color: #9fefa3;
   background-image: url(../img/header_49.jpg);
+  background-position: top;
+  background-repeat: repeat-y;
 }
 
 header, footer {
@@ -15,15 +16,12 @@ header, footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border: 1px solid rgba(4, 0, 255, 0.575);
-  border-radius: 5px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   min-height: 220px;
-  background-color: rgba(46, 117, 248, 0.5);
-  font-size: 5vw;
-  text-shadow: 0 0 10px black;
+  font-size: 4vw;
+  text-shadow: 0 0 10px white;
 }
 
 header h1, footer h1 {
@@ -31,6 +29,9 @@ header h1, footer h1 {
 }
 
 nav {
+  width: 10%;
+  text-align: center;
+  font-size: 2vw;
   background-color: rgba(88, 134, 231, 0.575);
   margin-bottom: 20px;
   border: 1px solid rgba(4, 0, 255, 0.575);
@@ -85,12 +86,12 @@ nav a {
 .imgbox img {
   width: 100%;
   border-radius: 10px;
-  padding: 5px;
+  padding: 10px;
 }
 
 .textbox {
   background-color: rgba(177, 151, 238, 0.7);
-  padding: 5px;
+  padding: 10px;
   width: 50%;
 }
 
@@ -107,13 +108,16 @@ nav a {
   text-shadow: 0 0 2px #ffffff, 0 0 5px #ffffff;
 }
 
-.textbox a {
+.textbox button {
   font-size: 2vw;
+  width: 70%;
+  cursor: pointer;
 }
 
-.textbox a img {
+.textbox button img {
   width: 50%;
   cursor: pointer;
+  margin-right: 10px;
 }
 
 @media (max-width: 500px) {
@@ -124,18 +128,19 @@ nav a {
 
 h2 {
   text-align: center;
-}
-
-h2 {
-  text-align: center;
-  color: rgba(29, 97, 175, 0.6);
+  text-shadow: 0 0 2px #ffffff, 0 0 5px #ffffff;
+  color: black;
   position: relative;
   font-size: 2vw;
   margin-bottom: 20px;
+  background-color: rgba(253, 244, 244, 0.8);
+  border-radius: 20px;
+  border: solid black 1px;
 }
 
 h2 #sort {
   position: absolute;
+  cursor: pointer;
   right: 20px;
 }
 /*# sourceMappingURL=style.css.map */
