--- a/style/style.css
+++ b/style/style.css
@@ -20,12 +20,18 @@ header, footer {
       -ms-flex-pack: start;
           justify-content: flex-start;
   min-height: 220px;
+  font-family: 'Dancing Script', cursive;
   font-size: 4vw;
-  text-shadow: 0 0 10px white;
 }
 
 header h1, footer h1 {
-  color: #0206f0;
+  color: black;
+  text-shadow: 0 0 10px #1a28ec;
+}
+
+footer {
+  background-color: rgba(0, 0, 0, 0.8);
+  margin-top: 50px;
 }
 
 nav {
@@ -93,6 +99,16 @@ nav a {
   background-color: rgba(177, 151, 238, 0.7);
   padding: 10px;
   width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
 }
 
 .textbox h3 {
